--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ a:hover {
     text-decoration: underline;
 }
 
-/* Header & Navigation */
+/* Header and Navigation */
 header {
     background: linear-gradient(90deg, rgba(1, 87, 152, 1) 0%, rgba(255, 255, 255, 1) 100%);
     padding: 1rem;
