--- a/style.css
+++ b/style.css
@@ -54,6 +54,16 @@ body {
     color: #333333;
     line-height: 1.6;
     animation: fadeIn 1s ease-out forwards;
+    background-image: url("images/abstract-bg.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-image: radial-gradient(circle,
+                    rgba(245, 247, 250, 0.8) 30%,
+                    rgba(245, 247, 250, 0.6) 50%,
+                    rgba(0, 0, 0, 0) 80%), 
+                      url("images/abstract-bg.jpg");
 }
 
 /* Links */
