--- a/style.css
+++ b/style.css
@@ -376,10 +376,26 @@ footer {
 
 /* Mobile device adjustments section */
 @media (max-width: 768px) {
-    nav a {
-      display: none;
-    }
     #hoverArrow {
         display: none !important;
     }
+    body {
+        font-size: 95%;
+        background-attachment: scroll;
+      }
+      section {
+        padding: 2rem 2rem;
+      }
+    
+      header {
+        background-size: cover;
+        background-position: center;
+        background: linear-gradient(90deg, rgba(0,105,184,1) 0%, rgba(0,188,186,1) 100%);
+      }
+      nav a {
+        display: none;
+      }
+      #projects .project .project-video {
+        display: none;
+      }
   }
